# snake

./: .gitignore  CMakeLists.txt  README.md  color.h  head.h  input.cpp  input.h  main.cpp  readme  snake  snake.cpp  snake.h  snake_map.cpp  snake_map.h
include/: snake.h
include/snake/: buffer_toggle.h  game.h  main.h  snake.h  snake_map.h
scr/: buffer_toggle.cpp  buffer_toggle.h  game.cpp  main.cpp  main.h  snake  snake.cpp  snake.h  snake_map.cpp  snake_map.h
snake/: CMakeLists.txt
tests/: ClassName.h  test.cpp
